@@ -10,10 +10,11 @@ models:
     - SmartAdminReport
     - SmartAdminReportSettings
     - KernelManagement
+    - SmartAlerts
 
 composites:
     General: ['sysinfo/ManageAdmins', 'webadmin/Language','webadmin/AdminPort', 'sysinfo/HostName']
-    SmartAdmin: ['sysinfo/KernelManagement', 'sysinfo/SmartAdminReportSettings','sysinfo/SmartAdminReport']
+    SmartAdmin: ['sysinfo/SmartAlerts','sysinfo/KernelManagement', 'sysinfo/SmartAdminReportSettings','sysinfo/SmartAdminReport']
     DateAndTime: []
 
 # NOTE: DateAnDtime composite components are dynamic in componentNames()
