@@ -1,4 +1,5 @@
 HEAD
+	+ Add smart alerts to Smart Admin feature
 	+ Add kernel management to Smart Admin feature
 	+ Add mail recipient for smart admin report
 6.1
